logs/Slang/chapter-6/6.16.11--string_itoa.sv.log
name: string_itoa
description: string.itoa()  tests
should_fail: 0
tags: 6.16.11
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.11--string_itoa.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.16.11--string_itoa.sv:10:4: error: invalid member access for type 'string'
		a.itoa(12);
		~^~~~~
